--- a/roobiology.html
+++ b/roobiology.html
@@ -295,15 +295,13 @@
 			<figure>
 				<img src="images/masterkid.jpg" alt="Novice">
 				<figcaption>
-					<span class="A-tv">A Gallifreyan Child</span>
-					<span class="A-notbbc">e</span>
+					<span class="A-tv">A Gallifreyan Child</span><span class="A-notbbc">e</span>
 				</figcaption>
 			</figure>
 			<img src="images/dwlogo.png" alt="Dr Who Logo" class="lead cf">
 			<h2>CHILDEHOOD</h2>
 			<div class="section">
-				<span class="A-audiobook">A Gallifreyan child
-					<span class="A-notbbc">e</span> ages slower then Humans and it takes hundreds of years for them to mature into what a Gallifreyan would consider
+				<span class="A-audiobook">A Gallifreyan child<span class="A-notbbc">e</span> ages slower then Humans and it takes hundreds of years for them to mature into what a Gallifreyan would consider
 					an adult.
 					<span class="A-tv">At 5 years old, loomlings are amazingly intelligent</span>
 					<span class="A-audiobook">An 11 year old would look like an 8 or 9 year old human,
@@ -312,8 +310,7 @@
 							still still look like young adult</span>
 					</span>
 				</span>
-				<span class="A-audiobook"> but would considered to be a very young child
-					<span class="A-notbbc">e. </span>
+				<span class="A-audiobook"> but would considered to be a very young child<span class="A-notbbc">e. </span>
 				</span>
 				<span class="A-tv">Gallifreyans in their teens need as much food as a human teenager if not more.
 					<span class="A-notbbc"> Adult Gallifreyans eat about as much as human.</span>
