--- a/roolifedeath.html
+++ b/roolifedeath.html
@@ -1258,7 +1258,7 @@ all activity. <span class="A-fanon">For this reason </span>some areas are config
 					</figure>
 					<div class="section">
 						<span class="A-tv">Gallifreyan Transmats </span>
-						<span class="A-audiobook">use molecular disassembly to transmit matter, and can not transmit through lethal levels of Ion Flux. Transmats can
+						<span class="A-audiobook">use molecular disassembly to transmit matter, and can not transmit through lethal levels of Ion Flux. <span class="A-tv">Augmented ultra long-range teleports have a maximum reach of 1 lightyear.</span> Transmats can
 							be used to reach individual Houses, but many Gallifreyans appear to prefer the trains to transmats. </span>
 						<span class="A-fanon">This might be because </span>
 						<span class="A-audiobook">a transmat leaves a Time Lord's fingers tingling for about an hour, </span>
@@ -1330,8 +1330,11 @@ Gallifrey has Inheritance Laws and Temporal Taxation,&nbsp;<span class="A-tv"><s
 						<span class="A-audiobook">Gallifreyan Thought Programs allow one to operate, alter, and program devices using one’s mind. They can be used
 							on
 							<span class="A-fanon">Time Rings and sonic screwdrivers, </span>eliminating the need for complicated controls. Gallifreyans use datacubes info-stamps
-							when they need to physically transport information. </span>
-						<span class="A-licensed">Gallifreyan technology is often powered by Neutron Batteries held in Zybanium Cradles. </span>
+							when they need to physically transport information.</span><span class="A-audiobook"> <span class="A-tv">These memory banks store the
+energy of perception and memories (aka artron energy) in high enough
+densities to be lethal if improperly discharged.&nbsp;Lesser species
+could find exposure to such memories would override their own personal
+memories.</span> </span><span class="A-audiobook"></span><span class="A-licensed">Gallifreyan technology is often powered by Neutron Batteries held in Zybanium Cradles. </span>
 					</div>
 					<div class="section">
 						<span class="A-audiobook">Many of the most </span>
@@ -1539,11 +1542,12 @@ user's current emotional state. </span>They keep track of popular music on a top
 				</div>
 				<div class="article" id="death" style="padding-top: 160px; margin-top: -160px;">
 					<figure>
+						<img src="images/confessiondial.jpg" alt="Confession Dial">
 						<img src="images/morgue.jpg" alt="Morgue">
 						<img src="images/urn.jpg" alt="Cinerary Urn">
 						<img src="images/coffin.jpg" alt="Sarcophagus">
 						<figcaption>
-							<span class="A-tv">The Morgue, a
+							<span class="A-tv">A Confession Dial, The Morgue, a
 								<span class="A-audiobook">Cinerary </span>Urn, </span>
 							<span class="A-audiobook">and a Sarcophagus</span>
 						</figcaption>
@@ -1553,10 +1557,15 @@ user's current emotional state. </span>They keep track of popular music on a top
 					<div class="section">
 						<span class="A-audiobook">Most Gallifreyans they usually choose there final Death Day between 7,000
 							<span class="A-licensed">and 12,000 </span>
-							<span class="A-infinity">(usually at about age 10,000). </span>
-							<span class="A-audiobook">They often spend the last years leading up to their final Deathday in meditation. </span>
-						</span>
-						<span class="A-audiobook"> When they choose their Deathday, many Gallifreyans have massive ceremonial funerals. These Deathday funerals</span>
+							<span class="A-infinity">(usually at about age 10,000). </span></span><span class="A-tv">As
+their death day approaches a Gallifreyan will use a confession dial as
+part of a purification ritual to face their demons and bring their mind
+to a state of peace the day before they join the memory gardens of the
+Matrix. </span><span class="A-audiobook">They often spend the last years leading up to their final chosen Deathday in meditation.</span><span class="A-tv">
+On the eve of their final death day the Confession Dial is
+traditionally given to the Gallifreyan's closest friend. The dial will
+only respond to its owner and the chosen friend. Others will receive a
+shock if they attempt to touch it. </span><span class="A-audiobook">Many Gallifreyans have massive ceremonial funerals. These Deathday funerals</span>
 						<span class="A-alternate"> are usually held at the family's house and </span>
 						<span class="A-audiobook">involve lots of Remembrance Flowers.<br></span>
 					</div>
@@ -1571,8 +1580,10 @@ user's current emotional state. </span>They keep track of popular music on a top
 							<span class="A-fanon">To this end the dying Gallifreyan will be placed in</span>
 							<span class="A-audiobook">a Gallifreyan Sarcophagus which will keep the subject in a state of hibernation</span>
 							<span class="A-fanon">until the body can be moved to the Capitol.
-								<span class="A-audiobook">If the subject is a Time Lord the Sarcophagus will carry the Seal of Rassilon. This hibernation chamber has a biomechanical
-									locking system preventing any non-Gallifreyan from opening it.</span>
+								<span class="A-audiobook">If
+the subject is&nbsp;a Time Lord then the Sarcophagus will carry the
+Seal of Rassilon. This hibernation chamber has a biomechanical locking
+system preventing any non-Gallifreyan from opening it.</span>
 							</span>
 						</span>
 						<span class="A-audiobook">Alternatively the subject's pattern can be held in a Gallifreyan</span>
@@ -1586,19 +1597,24 @@ user's current emotional state. </span>They keep track of popular music on a top
 						<span class="A-tv">Because of the risk of psychosomatic feedback living brains are never hooked directly into the Matrix. The Lord President
 							is an exception to this but he spends years training for such contact. </span>
 						<span class="A-audiobook">Gallifreyans can also use 'Soul Catching' to take the 'mind' of someone who is dying. </span>
-						<span class="A-tv">Once in the APC they live on forever.<br>&nbsp;<span class="A-audiobook"></span>
+						<span class="A-tv">Once in the APC they live on forever.<br><span class="A-audiobook"></span>
 						</span>
 					</div>
 					<div class="section">
-						<span class="A-audiobook">The deceased Gallifreyan's body is entombed in the vaults beneath their Houses
-							<span class="A-licensed"> where they quickly break down into degenerate matter and then into random molecules. </span>
-						</span>
-						<span class="A-audiobook">After the Regeneration cycle is used up, and a Time Lord knows that he is about to die, he can mentally trigger his
-							own corporeal destruction to keep his body from being discovered. </span>
-						<span class="A-tv">
-							<span class="A-audiobook">Under these circumstances </span>the disintegration of a Gallifreyan's body will happen within a minute after death.
-						</span>
-						<span class="A-audiobook">The Gallifreyan Roll of Honor is a list of Gallifreyans who have died with valor. </span>
+						<span class="A-audiobook">The deceased Gallifreyan's body is entombed in the vaults beneath their Houses </span>
+						<span class="A-licensed"> where they quickly break down into degenerate matter and then into random molecules. </span>
+						<span class="A-audiobook">After
+the Regeneration cycle is used up, and a Time Lord knows that he is
+about to die, he can mentally trigger his own corporeal destruction to
+keep his body from being discovered. Under these circumstances </span><span class="A-tv">the disintegration of a Gallifreyan's body will happen within a minute after death. </span>
+					</div>
+					<div class="section">
+						<span class="A-tv">After
+internment in the Matrix the confession dial will open for the friend
+and they can enter the dimensionally transcendental interior. There
+they can view the confessions and last will and testament of the
+deceased.</span><span style=""><span class="A-tv"></span></span><span class="A-audiobook"> The Gallifreyan Roll of Honor is a list of Gallifreyans who have died with valor.</span>
+						<br>
 					</div>
 				</div>
 				<div class="article" id="chronology" style="padding-top: 160px; margin-top: -160px;">
