--- a/roolifedeath.html
+++ b/roolifedeath.html
@@ -2146,10 +2146,7 @@ how to speak or read it.&nbsp;</span></span><span class="A-audiobook"><span clas
 				</div>
 				<div class="article" id="sayings" style="padding-top: 160px; margin-top: -160px;">
 					<figure>
-						Apprentice
-and Junior Time Lords are considered to be Lower Order Time
-Lords.&nbsp; Apprentice and Junior Time Lords are considered to be
-Lower Order Time Lords.&nbsp; <img src="images/hornsofrassilon.jpg" alt="Horns of Rassilon"><br>
+						<img src="images/hornsofrassilon.jpg" alt="Horns of Rassilon"><br>
 						<figcaption>
 							<span class="A-audiobook"> The Horns of Rassilon (aka the Sign of Rassilon, aka the V of Rassilon): The rudest insult of the Dark Times.</span>
 						</figcaption>
