Finished with Planet Page

--- a/roogallifrey.html
+++ b/roogallifrey.html
@@ -250,8 +250,7 @@ galactic 0 center. The Nebula of Cyclops is near enough to Gallifrey </span><spa
 					<span class="A-audiobook"> Gallifrey</span> is 29,000 light years from Sol III. However by the time of the Humanian Era</span>
 				<span class="A-tv">
 				the planet is 250,000,000 light years away
-					<span class="A-audiobook">in another galaxy</span>.
-					&nbsp;</span><span class="A-audiobook">Still other sources claim that Kasterborous is located billions of light-years from the Earth,<span class="A-licensed"> at the very edge of time and space.</span></span><span class="A-tv"><span class="A-fanon"> (it was probably moved there during the Time War or perhaps it was the only Gallifrey to physically survive the Time
+					<span class="A-audiobook">in another galaxy. </span></span><span class="A-audiobook">Still other sources claim that Kasterborous is located billions of light-years from the Earth,<span class="A-licensed"> at the very edge of time and space.</span></span><span class="A-tv"><span class="A-fanon"> (it was probably moved there during the Time War or perhaps it was the only Gallifrey to physically survive the Time
 						War)</span></span>.&nbsp;<span class="A-tv"></span><span class="A-audiobook"></span>
 			</div>
 		</div>
@@ -286,7 +285,7 @@ was the largest contributer to the New Astrology and personally wrote <span styl
 			</div>
 			
 			<div class="section">
-				<span class="A-audiobook">The Kasterborous Ice Ring, and Kasterborous Borealis</span><span class="A-audiobook"> are in the same sector as Gallifrey's system.</span>&nbsp;<span class="A-fanon"><span class="A-licensed">The world of Levithia is one of the closest inhabited worlds to Gallifrey with a Type-G environment.</span></span> <span class="A-audiobook"></span><span class="A-audiobook"><span class="A-fanon">It is possible that </span>
+				<span class="A-audiobook">The Kasterborous Ice Ring, and Kasterborous Borealis</span><span class="A-audiobook"> are in the same sector as Gallifrey's system.</span>&nbsp;<span class="A-fanon"><span class="A-licensed">The world of Levithia is one of the closest inhabited worlds to Gallifrey with a Type-G environment.<span class="A-audiobook"> Lavithia </span></span></span><span class="A-fanon"><span class="A-licensed">was center of the Levithian Empire which&nbsp;</span></span><span class="A-fanon"><span class="A-licensed"><span class="A-audiobook">was allied with the Cyrrhenic Empire.&nbsp;</span></span></span><span class="A-audiobook"><span class="A-fanon">It is possible that </span>
 				</span>
 				<span class="A-tv">
 					<span class="A-fanon">
@@ -313,7 +312,7 @@ was the largest contributer to the New Astrology and personally wrote <span styl
 						<span class="A-infinity">One of the stars on the outer edge of the constellation is a red giant which contains the storm belt (filled with ruined
 							spaceships).&nbsp;</span></span></span><span class="A-audiobook">Asomidium
 can be found in an asteroid belt in the Kasterborous Sector.&nbsp;This
-mineral was used to enhance Time Lord telepathy. <br><br>Gallifrey's Dominions include several planets that would be valuable if mined
+mineral was used to enhance Time Lord telepathy. </span><span class="A-fanon"><span class="A-licensed">It is forbidden to use black hole drives in the Seven Systems.</span></span><br><span class="A-audiobook"><br>Gallifrey's Dominions include several planets that would be valuable if mined
 					<span class="A-fanon"> (Could they contain Taranium?). <span class="A-licensed">Trakkiney is a hot dry dusty world that was one of the Time Lord’s first off-world colonies</span> (after the collapse of the Gallifreyan Empire).&nbsp;</span></span><span class="A-audiobook">The center of most of the galaxy’s trade routes pass relatively near Gallifrey. This is where most of the more
 					powerful civilizations in the cosmos can be found. </span>
 				<span class="A-tv">Time Lord traffic control monitor any vessels that pass near Gallifrey's space-time location. </span>
@@ -373,8 +372,8 @@ mineral was used to enhance Time Lord telepathy. <br><br>Gallifrey's Dominions i
 				<span class="A-audiobook">
 					<span class="A-tv">In
 order for Gallifrey’s 2nd Sun to rise in the south Gallifrey can’t be
-orbiting it [or perhaps Gallifrey’s magnetic poles are at right angles
-to its rotational axis]. These twin suns </span>
+orbiting it (or perhaps Gallifrey’s magnetic poles are at right angles
+to its rotational axis). These twin suns </span>
 					<span class="A-licensed">that Gallifrey orbits
 						<span class="A-audiobook">give the planet </span>
 					</span>
@@ -564,16 +563,18 @@ Depending on conditions </span><span class="A-tv">the moon appears to be copper 
 						</span>
 						<span class="A-infinity"> </span>
 						<span class="A-tv">
-							<span class="A-infinity">of</span> the</span><span class="A-tv"> of Wild Endeavor</span><span class="A-tv">.&nbsp;<span class="A-audiobook"><span class="A-infinity"></span></span>Its
-found between the mountains of Solace and Solitude. The valley between
-those mountains is known as the Drylands, and the Untempered Schism is
-found here. <span class="A-licensed">Another schism, the Crevasse of Memories That Will Be, is located outside the Capitol. </span></span><span class="A-audiobook">During the Dark Times the Capitol often suffers from a bitter wind from the Northern Lakes. </span><span class="A-tv"><span class="A-licensed">The Capitol isn't too far from</span> the red grass covered hillsides of Mount Perdition.
+							<span class="A-infinity">of</span> the</span><span class="A-tv"> of Wild Endeavor</span><span class="A-tv">.&nbsp;<span class="A-audiobook"><span class="A-infinity"></span></span>Its located between the mountains of Solace and Solitude. The valley between
+those mountains is known as the Drylands. &nbsp;Despite the facth that the Untempered Schism is
+found here, outlanders are the only inhabitants. <span class="A-licensed">Another schism, the Crevasse of Memories That Will Be, is located outside the Capitol. </span></span><span class="A-audiobook">During the Dark Times the Capitol often suffers from a bitter wind from the Northern Lakes. </span><span class="A-tv"><span class="A-licensed"><br><br>The Capitol isn't too far from</span> the red grass covered hillsides of Mount Perdition.
 							<span class="A-licensed">The areas around Mount Perdition were once filled with fruit and wild game.</span>
 							<span class="A-alternate">
 								<span class="A-licensed"> </span> The </span>
 						</span>
 						<span class="A-alternate"></span><span class="A-alternate">Fettarian pass has a train rout from the Capitol to the west cost of Wild Endeavor. </span>
-						<span class="A-audiobook">The </span>
+						<span class="A-alternate"></span>
+					<span class="A-fanon"><span class="A-licensed">It would take well over two months to walk from the Capitol to Arcadia (so around 2000 miles?)&nbsp;</span></span><span class="A-audiobook">The
+Lowlands of Outer Gallifrey are separated from the Arcadian Desert by
+the&nbsp;Myridian Mountains. </span><span class="A-audiobook">The </span>
 						<span class="A-audiobook">Soonwell Valley is 500 leagues (~3000 km) from the Capitol </span>
 						<span class="A-audiobook">
 							<span class="A-audiobook">
@@ -587,7 +588,7 @@ found here. <span class="A-licensed">Another schism, the Crevasse of Memories Th
 						</span>
 						<span class="A-audiobook">
 							<span class="A-audiobook">
-								<span class="A-alternate">Prydonia Sector <span class="A-fanon">(and the city of Prydos) </span>is located to the south of the Capitol. </span>
+								<span class="A-alternate">Prydonia Sector <span class="A-fanon">(and the city of Prydos) </span>is located to the south of the Capitol. &nbsp;</span></span></span><span class="A-audiobook"></span><span class="A-audiobook"><span class="A-audiobook"><span class="A-alternate"> </span>
 							</span>
 						</span>
 				</div>
@@ -651,7 +652,9 @@ are around the wamer equator.</span> </span>
 							<span class="A-fanon">(possibly the Camation Desert?).</span>&nbsp;</span></span><span class="A-tv">The Death Zone (or Forbidden Zone) is</span><span class="A-game"><span class="A-game"><span class="A-licensed"> a pentagon shaped valley</span> </span></span><span class="A-audiobook">about the size of North Wales </span><span class="A-game"><span class="A-game">in the southern hemisphere&nbsp;</span><span class="A-tv">which served as an arena for the Games. It is</span></span><span class="A-tv"></span><span class="A-audiobook"><span class="A-tv"> surrounded by a powerful forcefield that can trap even a TARDIS. </span></span><span class="A-audiobook"><span class="A-notbbc">
 						</span>
 					</span>
-					<span class="A-audiobook"><span class="A-licensed"><br><br>The water of Gallifrey's streams often tastes slightly sweet.</span>&nbsp;The </span>
+					<span class="A-audiobook">The Gin-Seng Sector <span class="A-notbbc">covers some of the southern mountain near House Ixion (the southernmost chapterhouse).&nbsp;</span>The <span class="A-notbbc">feral </span>so-called Killer Cats lived in the Gin-Seng Sector.&nbsp;<span class="A-notbbc">These precognitive cat people despised the traditions of the Time Lords, </span></span><span class="A-audiobook">and had their own mercenaries </span><span class="A-audiobook"><span class="A-notbbc">and oracles. </span></span><span class="A-audiobook"><span class="A-audiobook"><span class="A-alternate"> </span>
+							</span>
+						</span><br><span class="A-audiobook"><span class="A-licensed"><br>The water of Gallifrey's streams often tastes slightly sweet.</span>&nbsp;The </span>
 					<span class="A-audiobook">River Lethe is located within walking distance of Mount Cadon. </span>
 					<span class="A-audiobook">
 						<span class="A-alternate">
@@ -661,18 +664,14 @@ are around the wamer equator.</span> </span>
 						</span>
 					</span>
 					<span class="A-tv">Mount
-						<span class="A-audiobook">Lung </span>is located in Southern Gallifrey.&nbsp;</span>Other important mountains are <span class="A-alternate">Mount Plutarch (which is near<span class="A-audiobook"> the Lune Forest</span> and the inland sea), <span class="A-licensed">Serenity,</span> and </span>the Meridian Mountains. 
-					<span class="A-audiobook">The
-Lowlands of Outer Gallifrey are separated from the Arcalian Desert by
-the Meridian Mountains.&nbsp; Lake Abydos might be near House
+						<span class="A-audiobook">Lung </span>is located in Southern Gallifrey.&nbsp;</span>Other important mountains are <span class="A-alternate">Mount Plutarch (which is near<span class="A-audiobook"> the Lune Forest</span> and the inland sea), <span class="A-licensed">and Serenity.</span></span><span class="A-audiobook"> &nbsp;Lake Abydos might be near House
 Heartshaven (or Dvora).&nbsp;</span><span class="A-audiobook">The Arkanian Desert</span> is another other area of the planet. &nbsp;<span class="A-audiobook"><br><br> </span>
 				</div>
 				<div class="section">
 					<span class="A-audiobook">Gold has no special value on Gallifrey </span>
 					<span class="A-fanon">(indicating it is quite common?) </span>
 					<span class="A-audiobook"> The planet also has a significant amount of Gallifreyan Zinc which is one of the strongest metals in the universe. &nbsp;<span class="A-licensed">Madranite is fairly common as well.</span> </span>
-					<span class="A-alternate">The area of Gallifrey known as Mansippia once had massive amounts of Zyton ore. </span>
-					<span class="A-fanon"><span class="A-licensed">It would take well over two months to walk from the Capitol to Arcadia (so around 2000 miles?) </span>The Arcadian Sector of </span>
+					<span class="A-alternate">The area of Gallifrey known as Mansippia once had massive amounts of Zyton ore.</span><span class="A-audiobook">&nbsp;</span><span class="A-fanon"><span class="A-licensed"></span>The Arcadian Sector of </span>
 					<span class="A-tv">Gallifrey is the only place in the cosmos where one can find white-point star diamonds.
 						<span class="A-fanon">This is why</span> Arcadian Diamonds the most expensive substance in the Galaxy. <span class="A-game">White
 Star diamonds are one of the stronest stones in the cosmos and can even
@@ -684,8 +683,9 @@ complex celluar structure that allows them to be programmed <span class="A-fanon
 			<div class="article" id="plants" style="padding-top: 130px; margin-top: -130px;">
 				<figure>
 					<img src="images/remeberanceflower.jpeg" alt="Flower of Remembrance">
+					<img src="images/moonlight_bloom.jpg" alt="Moonlight Bloom">
 					<img src="images/plant.jpg" alt="Gallifreyan Plant">
-					<figcaption class="A-audiobook">Memento Mori: The Gallifreyan Flower of Remembrance <span class="A-licensed">and another Gallifreyan Plant</span></figcaption>
+					<figcaption class="A-audiobook">Memento Mori: The Gallifreyan Flower of Remembrance, Moonlight Bloom, <span class="A-licensed">and another Gallifreyan Plant</span></figcaption>
 				</figure>
 				<img src="images/dwlogo.png" alt="Dr Who Logo" class="lead cf">
 				<h2>FLORA OF GALLIFREY</h2>
@@ -711,7 +711,7 @@ complex celluar structure that allows them to be programmed <span class="A-fanon
 					<span class="A-audiobook">Sarlain </span>
 					<span class="A-tv"> (a yellow flower that resembles a Terran Daisy,
 						<span class="A-audiobook">Daffodil or Rose)</span></span><span class="A-audiobook">, </span>
-					<span class="A-audiobook">Gallifreyan Flowers of Remembrance (<i>Memento Mori - </i> 6 yellow petals)</span><span class="A-audiobook">, Schlenk Blossom</span><span class="A-audiobook">s <span class="A-licensed">(golden-green</span>&nbsp;with a strong scent), </span>
+					<span class="A-audiobook">Moonlight Blooms (silver petals, symbolizes peace and meditation), Gallifreyan Flowers of Remembrance (<i>Memento Mori - </i> 6 yellow petals)</span><span class="A-audiobook">, Schlenk Blossom</span><span class="A-audiobook">s <span class="A-licensed">(golden-green</span>&nbsp;with a strong scent), </span>
 					<span class="A-audiobook">
 						<span class="A-licensed">Gallifreyan Heather (which is harvested for its scent), Arkytior&nbsp;</span></span><span class="A-audiobook">(a pearl-gray Gallifreyan rose)</span><span class="A-audiobook"><span class="A-licensed">, </span></span><span class="A-audiobook"><span class="A-licensed">velvet-red&nbsp;</span>Madevinia Aridosa (small desert plants that have an incredibly rapid life cycle),</span><span class="A-audiobook"><span class="A-licensed"> </span>
 					</span>
@@ -732,7 +732,7 @@ complex celluar structure that allows them to be programmed <span class="A-fanon
 				<div class="section">
 					<span class="A-audiobook">Other plants include </span>
 					<span class="A-audiobook"><span class="A-licensed">ferns</span> Hefzi Moss, </span>
-					<span class="A-audiobook">Onions, Grockel Root (a type of plant
+					<span class="A-audiobook">Tristort&nbsp;</span><span class="A-audiobook">(strong smelling plant found on the mountains of Southern Gallifrey),</span><span class="A-audiobook"> Weanskrike (another strong smelling plant found on the mountains of Southern Gallifrey), Onions, Grockel Root (a type of plant
 						<span class="A-infinity">that is eaten and</span> used to make alcohol), </span>
 					<span class="A-audiobook">
 						<span class="A-audiobook">
@@ -815,10 +815,8 @@ complex celluar structure that allows them to be programmed <span class="A-fanon
 					<span class="A-audiobook">Taffelshrews, </span>
 					<span class="A-audiobook">Fledershrews (bat-like, mushroom eaters, that are nearly extinct),</span>
 					<span class="A-audiobook"> Cobblemice (which sprout wings), Rovie Mice (live in fields, long lived if they are not killed, sometimes kept as pets),
-						Vex (burrowing animal), Gallifreyan Womprats (1 meter long rats with fifteen legs), Pig-Rats, </span>
-					<span class="A-audiobook"><span class="A-licensed">Rabbits, </span>Flubbles (small six-legged koalas), an animal similar to a rabbit, but rounder, </span>
-					<span class="A-audiobook">Sealak (often eaten), <span class="A-licensed">Bear-Ass (a donkey like animal with bear-like qualities),</span> Horse-Cats, </span>
-					<span class="A-audiobook"><span class="A-licensed">Cows,</span> Elephants, </span>
+						Vex (burrowing animal), Gallifreyan Womprats (1 meter long rats with fifteen legs), Pig-Rats, Rabbits, </span><span class="A-audiobook"><span class="A-licensed"></span>Flubbles (small six-legged koalas), an animal similar to a rabbit, but rounder, </span>
+					<span class="A-audiobook">Sealak (often eaten), <span class="A-licensed">Bear-Ass (a donkey like animal with bear-like qualities),</span> Horse-Cats,&nbsp;</span><span class="A-audiobook"><span class="A-licensed"></span>Elephants, </span>
 					<span class="A-audiobook">Pig-Bears (which can be trained to household pets, <span class="A-licensed">and can probobly suffer from swine fever),</span></span><span class="A-audiobook"><span class="A-licensed">
 wolf-like creatures (with very long snouts and black-and-white striped
 fur that are almost as big as adult humanoid), Broakir (live in
